--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.7",
-    "aws-amplify": "^6.2.0",
+    "@aws-amplify/ui-react": "^6.1.11",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "aws-amplify": "^6.3.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
